[stage-3] Add server